V3923: Modifche per rimozione ITEMs non istallati in P170 e salti di pagina verso P061. Sistemazione pagina Overall

--- a/Prevu.Synoptics.V3923_Evanses/OverallView.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/OverallView.xaml
@@ -52,100 +52,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="58" StatusComponent="106-01-MA1" Canvas.Left="1961" Canvas.Top="1586" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="86" StatusComponent="106-01-MA1" Canvas.Left="1906" Canvas.Top="1557" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="290" StatusComponent="106-01-MA1" Canvas.Left="1845" Canvas.Top="1774" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="852" StatusComponent="106-01-MA1" Canvas.Left="1988" Canvas.Top="1917" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="552" StatusComponent="127-01-MA1" Canvas.Left="2545" Canvas.Top="1393" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="802" StatusComponent="106-01-MA1" Canvas.Left="2437" Canvas.Top="1519" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="206" StatusComponent="127-01-MA1" Canvas.Left="2617" Canvas.Top="1667" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="1949" StatusComponent="106-01-MA1" Canvas.Left="2836" Canvas.Top="943" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="2700" StatusComponent="127-01-MA1" Canvas.Left="2819" Canvas.Top="286" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="2825" StatusComponent="123-01-MA1" Canvas.Left="2736" Canvas.Top="269" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="61" StatusComponent="123-01-MA1" Canvas.Left="2679" Canvas.Top="1129" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="700" StatusComponent="123-01-MA1" Canvas.Left="2388" Canvas.Top="781" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="156" StatusComponent="106-01-MA1" Canvas.Left="2760" Canvas.Top="1020" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="666" StatusComponent="127-01-MA1" Canvas.Left="2488" Canvas.Top="765" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="501" StatusComponent="030-01-MA1" Canvas.Left="1090" Canvas.Top="564" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="974" StatusComponent="030-01-MA1" Canvas.Left="1610" Canvas.Top="564" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="2202" StatusComponent="030-01-MA1" Canvas.Left="2580" Canvas.Top="424" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="150" StatusComponent="123-01-MA1" Canvas.Left="2663" Canvas.Top="342" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="134" StatusComponent="127-01-MA1" Canvas.Left="2754" Canvas.Top="351" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="144" StatusComponent="030-01-MA1" Canvas.Left="2510" Canvas.Top="494" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="68" StatusComponent="123-01-MA1" Canvas.Left="5525" Canvas.Top="301" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="120" StatusComponent="127-01-MA1" Canvas.Left="5457" Canvas.Top="344" Color="ByProduct" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="86" StatusComponent="293-01-MA1" Canvas.Left="1673" Canvas.Top="1559" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -161,7 +67,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="1620" Canvas.Top="3809" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="170" RenderTransformOrigin="0.5,0.5" StatusComponent="173-01-MA1" Canvas.Left="4230" Canvas.Top="1680" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="103" StatusComponent="545-01-MA1" PipeHeight="Medium" Canvas.Left="9723" Canvas.Top="3539" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="103" StatusComponent="535-01-MA1" PipeHeight="Medium" Canvas.Left="8193" Canvas.Top="3539" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="7385" Canvas.Top="1418" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -203,7 +108,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="523" RenderTransformOrigin="0.5,0.5" StatusComponent="173-01-MA1" Canvas.Left="3691" Canvas.Top="1680" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="155" RenderTransformOrigin="0.5,0.5" StatusComponent="150-01-MA1" Canvas.Left="4193" Canvas.Top="1293" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="2674" Canvas.Top="1467" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="141" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="2791" Canvas.Top="1104" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -645,11 +549,10 @@
         </Misc:DashedLine>
         <TextBlock Canvas.Top="5017" Text="{lex:Loc External Mixing Silos System}" TextWrapping="Wrap" TextAlignment="Center" Opacity="0.7" Canvas.Left="2373" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Height="97" Width="238"/>
         <local:P020 CacheMode="BitmapCache" Canvas.Left="88" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="269" d:IsLocked="True"/>
-        <local:P061 CacheMode="BitmapCache" Canvas.Left="4710" Canvas.Top="286" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P088 Canvas.Left="1096" Canvas.Top="2112" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P100 CacheMode="BitmapCache" Canvas.Left="1172" Canvas.Top="985" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P140 CacheMode="BitmapCache" Canvas.Left="2776" Canvas.Top="935" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P170 CacheMode="BitmapCache" Canvas.Left="4129" Canvas.Top="1136" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P170 CacheMode="BitmapCache" Canvas.Left="4155" Canvas.Top="976" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P230 CacheMode="BitmapCache" Canvas.Left="6653" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P268 CacheMode="BitmapCache" Canvas.Left="49" Canvas.Top="3076" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P288 CacheMode="BitmapCache" Canvas.Left="8468" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
