--- a/Prevu.Synoptics.V3923_Evanses/Pages/P020.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P020.xaml
@@ -229,8 +229,8 @@
         <Machines:NT_ConveyorBelt Height="1" Width="154" Canvas.Left="1092" Canvas.Top="190" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="36" Width="31" Canvas.Left="210" Canvas.Top="287"/>
         <Machines:Radar Height="36" Width="30" Canvas.Left="695" Canvas.Top="548" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="943" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Top" JumpFromLabel="098-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="1434" Canvas.Top="754"/>
-        <Labels:JumpLabel JumpFromLabel="030-01-MA1" JumpToLabel="031-01-MA1" Canvas.Left="932" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="126" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="48" Canvas.Top="405"/>
         <Labels:DetailsLabel ComponentName="024-LUB" DetailsPageName="D024" Canvas.Left="613" Canvas.Top="471" HorizontalAlignment="Center" VerticalAlignment="Top"/>
