--- a/Prevu.Synoptics.V3923_Evanses/Pages/P100.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P100.xaml
@@ -141,7 +141,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="86" StatusComponent="293-01-MA1" Canvas.Left="457" Canvas.Top="510"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="96" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="1358" Canvas.Top="480"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="112" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="658" Canvas.Top="502">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="112" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="655" Canvas.Top="502">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -182,6 +182,13 @@
         <Labels:Pipe Width="457" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="154" Canvas.Top="223" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="515" Color="Water" Canvas.Left="96" Canvas.Top="178" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="113-01-MA1"/>
         <Labels:Pipe Width="44" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1386" Canvas.Top="580" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="48" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1424" Canvas.Top="166" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Machines:V01_DCT_Decanter Canvas.Left="308" Canvas.Top="559" Height="279" Width="194" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" TrendName="LEVEL"/>
         <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="50" Canvas.Left="73" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:EXC_HeatExchanger.RenderTransform>
@@ -250,12 +257,12 @@
         </Machines:V01_SCW_Screw_wHopper>
         <Machines:V01_VB_VibratingScreen Canvas.Left="851" Canvas.Top="386" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Radar Height="36" Width="30" Canvas.Left="569" Canvas.Top="66" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="689" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1406" Canvas.Top="640" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1426" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="100-01-MA1" JumpToLabel="098-01-MA1" Canvas.Left="350" Canvas.Top="38"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="115-41-LT1" JumpToLabel="293-01-MA1" RenderTransformOrigin="-0.711,0.53" Canvas.Left="489" Canvas.Top="478" Direction="Left"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="120-01-MA1" JumpToLabel="128-01-MA1" Canvas.Left="1431" Canvas.Top="450"/>
-        <Labels:JumpLabel JumpFromLabel="106-01-MA1" JumpToLabel="051-01-MA1" Canvas.Left="678" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="127-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="1395" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="123-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="1440" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="107-HEAT" DetailsPageName="D107" Canvas.Left="15" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="115-01-MA1" Canvas.Left="362" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="115-21-CV1" Canvas.Left="212" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top"/>
