--- a/Prevu.Synoptics.V3923_Evanses/Pages/P140.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P140.xaml
@@ -114,7 +114,6 @@
         <Machines:V01_NT_Belt_BottleSorter_wRoll Canvas.Left="737" Canvas.Top="135" Height="116" Width="246" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_NT_Belt_BottleSorter_wRoll Canvas.Left="705" Canvas.Top="537" Height="116" Width="246" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="128-01-MA1" JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="117" Canvas.Top="138"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="180-01-MA1" JumpToLabel="173-01-MA1" Canvas.Left="853" Canvas.Top="713"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="150-01-MA1" JumpToLabel="168-01-MA1" Canvas.Left="1356" Canvas.Top="328"/>
         <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="794" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="150-SORT" DetailsPageName="D150" Canvas.Left="1084" Canvas.Top="197" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -125,5 +124,6 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="183-01-MA1" Canvas.Left="1105" Canvas.Top="603"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="129-01-MA1" Canvas.Left="531" Canvas.Top="241"/>
         <Labels:DeviceLabel ComponentName="143-01-MA1" Canvas.Left="755" Canvas.Top="314" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="864" Canvas.Top="707" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
