Test: Rimosso selezione multipla sulle dipendenze

--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="746" Width="1600">
 
 	<ScrollViewer HorizontalScrollBarVisibility="Auto">
-        <!--<Synoptics:P230/>-->
+        <!--<Synoptics:OverallView/>-->
     </ScrollViewer>
 
 </Window>
