V3923: D020 Removed Components, Small fix on P170, P268 and P350, Text fix on P608, P849, P880 and P940

--- a/Prevu.Synoptics.V3923_Evanses/Pages/P170.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P170.xaml
@@ -27,7 +27,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="114" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="640" Canvas.Top="364" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
+        <Labels:Pipe Width="114" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="640" Canvas.Top="372" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -41,7 +41,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="25" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1173" Canvas.Top="605" HorizontalAlignment="Left" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="41" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1165" Canvas.Top="613" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -86,6 +86,6 @@
         <Labels:DeviceLabel ComponentName="168-01-MA1" Canvas.Left="437" Canvas.Top="249" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="208-01-MA1" Height="50" Width="90" Canvas.Left="1087" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="675" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1164" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="43" Width="43" Canvas.Left="1164" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
