V3923: Small Fix on Text P608, P849, P880 and P940

--- a/Prevu.Synoptics.V3923_Evanses/Pages/P608.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P608.xaml
@@ -239,11 +239,7 @@
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
-        <TextBlock Canvas.Top="773" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1025" FontSize="26" d:Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Width="238">
-            <TextBlock.Text>
-                <lex:Loc>#MIX SILOS &apos;A&apos; </lex:Loc>
-            </TextBlock.Text>
-        </TextBlock>
+        <TextBlock Canvas.Top="773" Text="MIX SILOS &apos;A&apos;" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1025" FontSize="26" d:Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Width="238"/>
         <Labels:JumpLabel JumpFromLabel="546-01-MA1" JumpToLabel="545-01-MA1" Canvas.Left="78" Canvas.Top="109" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="546-01-MA1" JumpToLabel="535-01-MA1" Canvas.Left="57" Canvas.Top="34" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="608-01-YA1" Canvas.Left="1373" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Center"/>
