--- a/Prevu.Synoptics.V3923_Evanses/Pages/P849.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P849.xaml
@@ -188,21 +188,9 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <TextBlock Canvas.Top="91" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="121" FontSize="26" d:Foreground="White" Width="238" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBlock.Text>
-                <lex:Loc>#MIX SILOS &apos;E&apos;</lex:Loc>
-            </TextBlock.Text>
-        </TextBlock>
-        <TextBlock Canvas.Top="721" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="505" FontSize="26" d:Foreground="White" Width="170" HorizontalAlignment="Left" VerticalAlignment="Center" Height="82">
-            <TextBlock.Text>
-                <lex:Loc>#BAG STATION &apos;O&apos;</lex:Loc>
-            </TextBlock.Text>
-        </TextBlock>
-        <TextBlock Canvas.Top="408" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1226" FontSize="26" d:Foreground="White" Width="170" Height="82" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <TextBlock.Text>
-                <lex:Loc>#BAG STATION &apos;P&apos;</lex:Loc>
-            </TextBlock.Text>
-        </TextBlock>
+        <TextBlock Canvas.Top="91" Text="MIX SILOS &apos;E&apos;" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="121" FontSize="26" d:Foreground="White" Width="238" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock Canvas.Top="721" Text="BAG STATION &apos;O&apos;" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="505" FontSize="26" d:Foreground="White" Width="170" HorizontalAlignment="Left" VerticalAlignment="Center" Height="82"/>
+        <TextBlock Canvas.Top="408" Text="BAG STATION &apos;P&apos;" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1226" FontSize="26" d:Foreground="White" Width="170" Height="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="878-01-MA1" JumpToLabel="880-01-EC1" Canvas.Left="1356" Canvas.Top="762" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="850-01-MA1" Canvas.Left="438" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="849-01-MA1" Canvas.Left="714" Canvas.Top="40" HorizontalAlignment="Left" VerticalAlignment="Center" />
