--- a/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
@@ -221,11 +221,7 @@
         </Machines:External>
         <Machines:VRC_WaterCollectingTank Height="69" Width="23" Canvas.Left="780" Canvas.Top="105" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="51" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="785" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock Canvas.Top="502" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1205" FontSize="26" d:Foreground="White" Width="170" Height="82" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <TextBlock.Text>
-                <lex:Loc>#BAG STATION &apos;N&apos;</lex:Loc>
-            </TextBlock.Text>
-        </TextBlock>
+        <TextBlock Canvas.Top="502" Text="BAG STATION &apos;N&apos;" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1205" FontSize="26" d:Foreground="White" Width="170" Height="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="939-21-CV1" JumpToLabel="898-01-MA1" Canvas.Left="55" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-HOPPER" DetailsPageName="D950" HideComponentName="True" Canvas.Left="844" Canvas.Top="207"/>
         <Labels:DetailsLabel ComponentName="940-HOPPER" DetailsPageName="D940" HideComponentName="True" Canvas.Left="366" Canvas.Top="217" HorizontalAlignment="Left" VerticalAlignment="Center"/>
